<resources>
    <string name="app_name">Smart Ottawa Public Transit</string>
    <string name="app_short_name">SOPTS</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="connect_station">Test Connection</string>
    <string name="get_bus_time">Choose Bus Route:</string>
    <string name="force_bluetooth">Use Bluetooth</string>
    <string name="force_wifi">Use WiFi</string>
    <string name="next_bus_time">Find Next Bus Arrival</string>
    <string name="test_wifi">Test WiFi</string>
    <string name="test_bluetooth">Test Bluetooth</string>
    <string name="results">Results</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_about">About</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_about">About</string>
    <string name="developed_by">Developed By</string>
    <string name="matthew_preston">Matthew Preston</string>
    <string name="data_provided">Data Provided By</string>
    <string name="octranspo">OC Transpo</string>
    <string name="description">Description</string>
    <string name="contact">Contact</string>
    <string name="email">Email: matthew.preston@carleton.ca</string>
    <string name="list_tech">List of Technologies</string>
    <string name="title_activity_tab">TabActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
