<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.matthewpreston.bluetoothtransit.AboutActivity"
    tools:showIn="@layout/activity_about">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/developed_by"
            android:textColor="@color/bright_foreground_material_dark"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/bright_foreground_material_dark"
            android:text="@string/matthew_preston"
            android:id="@+id/textView2" />

    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/data_provided"
        android:textColor="@color/bright_foreground_material_dark"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/octranspo"
        android:textColor="@color/bright_foreground_material_dark"
        android:id="@+id/textView2" />
    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/description"
        android:textColor="@color/bright_foreground_material_dark"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="This project was originally created and developed for my Honours Project at Carleton University. The entire project involves this application working with a Raspberry Pi server to deliver OC Transpo bus arrival times through Bluetooth and WiFi."
        android:textColor="@color/bright_foreground_material_dark"
        android:id="@+id/textView2" />

    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bright_foreground_material_dark"
        android:text="@string/contact"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/email"
        android:textColor="@color/bright_foreground_material_dark"
        android:id="@+id/textView2" />
    <TextView
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/list_tech"
        android:textColor="@color/bright_foreground_material_dark"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Raspberry Pi\nPython\nBluetooth RFCOMM\nUDP Broadcast\nMySQL\nAndroid\n"
        android:textColor="@color/bright_foreground_material_dark"
        android:id="@+id/textView2" />

    </LinearLayout>
